----------------------------------------------------------------------
 OmegaT 2.0.0 update 1 Changes
----------------------------------------------------------------------
2.0.0 update 1 vs. 2.0.0

  3 Enhancements
  2 Bugfixes

----------------------------------------------------------------------
2.0.0 update 1

  Bugs
  
  - Spellcheck EN-US: incorrect handling of hyphenated compounds
  http://sourceforge.net/support/tracker.php?aid=1815736 
  (Requires tokenizers from http://sourceforge.net/projects/omegat-plugins)
  - PO Filter: \ is doubled for \t
  http://sourceforge.net/support/tracker.php?aid=2149518

  Other enhancements:

  - The instant start is displayed correctly (right aligned) for RTL 
languages
  - OmegaT can use tokenizers to get stemming in fuzzy and glossary
matches. 
  (Requires tokenizers from http://sourceforge.net/projects/omegat-plugins)

  - Japanese localisation updated to 2.0 (UI)
  - Basque localisation updated to 2.0 (UI)
  - Slovenian localisation updated to 2.0 (UI) 

----------------------------------------------------------------------
 OmegaT 2.0.0 Changes
----------------------------------------------------------------------
2.0.0 vs. 1.8.1 


  14 Enhancements
  0  Bugfix

----------------------------------------------------------------------
2.0.0 

  Implemented requests:
  
  - User-configurable keyboard shortcuts
  http://sourceforge.net/support/tracker.php?aid=1615400 

  - Shortcut for Reload/Close/Create translated documents
  http://sourceforge.net/support/tracker.php?aid=1618679  

  - Additions to the log
  http://sourceforge.net/support/tracker.php?aid=1632959  

  - Keep position after clicking a file 
  http://sourceforge.net/support/tracker.php?aid=2150276 

  - Project List to remain in front
  http://sourceforge.net/support/tracker.php?aid=1808903 

  - Rewrite thread use
  http://sourceforge.net/support/tracker.php?aid=1581565  

  Other enhancements:
