@@ -29,7 +29,7 @@ package org.omegat.util;
 import java.util.regex.Pattern;
 
 /**
- * Constant patterns, used in dirrerent other classes.
+ * Constant patterns, used in different other classes.
  *
  * @author Maxym Mykhalchuk
  * @author Didier Briel
@@ -81,6 +81,10 @@ public class PatternConsts
     public static final Pattern HTML_HTML = Pattern.compile(
             "<html.*?>",                                                            // NOI18N
             Pattern.CASE_INSENSITIVE);
+
+    /** Pattern for detecting html &ltBR&gt; tags */
+    public static final Pattern HTML_BR = Pattern.compile(
+            "<BR>", Pattern.CASE_INSENSITIVE);
     
     /**
      * Pattern that matches full string containing in full and only
@@ -130,4 +134,29 @@ public class PatternConsts
     /** Pattern for detecting remote dictionary file archives */
     public static final Pattern DICTIONARY_ZIP = Pattern.compile(
             "\"([a-z]{1,8})(_([A-Z]{1,8})?)?\\.zip\"");
+    
+    /** Pattern for detecting the placeholders in a printf-function string
+     *  which can occur in languages like php, C and others. 
+     *  placeholder ::= [ARGUMENTSWAPSPECIFIER] [SIGNSPECIFIER] [PADDINGSPECIFIER] [ALIGNMENTSPECIFIER] [WIDTHSPECIFIER] [PRECISIONSPECIFIER] TYPESPECIFIER
+     *  NUMBER ::= { "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" }
+     *  ARGUMENTSWAPSPECIFIER = NUMBER "\$"
+     *  SIGNSPECIFIER ::= "+" | "-"
+     *  PADDINGSPECIFIER ::= " " | "0" | "'" CHARACTER
+     *  ALIGNMENTSPECIFIER ::= "" | "-"
+     *  WIDTHSPECIFIER ::= NUMBER
+     *  PRECISIONSPECIFIER ::= "." NUMBER
+     *  TYPESPECIFIER ::= "b" | "c" | "d" | "e" | "E" | "f" | "F" | "g" | "G" | "i" | "n" | "o" | "p" | "s" | "u" | "x" | "X" | "%"
+     *  //c++: [cdieEfgGosuxXpn%]
+     *  //php: [bcdeufFosxX%]
+     *  NB: Because having space as paddingspecifier leads to many false matches 
+     *  in regular text, and space being the default padding specifier in php, 
+     *  and being able to have space or 0 as padding specifier by prefixing it 
+     *  with ', and having the padding specifier not being used frequently in 
+     *  most cases, the regular expression only corresponds with quote+paddingspecifier. 
+     *  NB2: The argument swap specifier gives explicit ordering of variables, 
+     *  without it, the ordering is implicit (first in sequence is first in order)
+     *  Example in code: <code>echo printf(gettext("%s is very %s"), "OmegaT", "great");</code>*/
+    public static final Pattern PRINTF_VARS = Pattern.compile(
+            "%([1-9]+\\\\\\$)?([+-])?('.)?(-)?([0-9]*)(\\.[0-9]*)?[bcdeEfFgGinopsuxX%]", Pattern.CASE_INSENSITIVE);
+
 }
